@@ -1,10 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.652 2006/06/17 04:55:04 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.653 2006/06/17 14:55:43 codeman Exp $
 
   17 Jun 2006; Preston Cody <codeman@gentoo.org>
   Added code to the mta step in AT to parse the install packages list and
   look for mtas and if it finds it emerge it.
+  Initial attempt at moving extra_packages early in the setup to only show
+  local USE flags relating to those packages.
 
   9 Jun 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIUtility.py:
